--- a/style.css
+++ b/style.css
@@ -8,3 +8,22 @@ a{
     color: black;
     text-decoration: none;
 }
+
+body{
+    background-image: url(fundo.webp);
+    background-color: rgb(129, 33, 184);
+    background-repeat: no-repeat;
+    background-size: cover;
+}
+
+.c-principal{
+    background-color: aliceblue;
+    margin: 0;
+    width: 500px;
+    height: 600px;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    box-shadow: 10px 10px 100px 10px rgb(85, 8, 81);
+}
